# bot-tg

my_bot/: pyproject.toml  requirements.txt
my_bot/src/: main.py
